fix: replace Files.readString() with Java 8 compatible Files.readAllBytes()
Files.readString() was introduced in Java 11 and is not available when
compiling with Java 8. Replace it with Files.readAllBytes() wrapped in
a String constructor with explicit UTF-8 charset encoding.

https://claude.ai/code/session_01XtuzdfWkCWvnWSQqHgiiSm